Update HTML structure and fix button functions

--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
             <h2 class="text-white">Need a gaming laptop?</h2>
             <p class="text-muted">Enter your budget to find the one for you!</p>
             <input type="number" id="budgetPrice" class="form-control w-100 text-center" placeholder="Enter Budget (Ex: 70000)">
-        <button type="button" class="btn btn-dark mt-3" onclick="BudgetPrice()">Brands & Discounts</button>
-                <div id="location"></div>
 
-        <button type="button" class="btn btn-dark mt-3">Store Location</button>
+        <button type="button" class="btn btn-dark mt-3" onclick="getDiscount()">Brands & Discounts</button>
         <div id="brands"></div>
+
+        <button type="button" class="btn btn-dark mt-3" onclick="getLocation()">Store Location</button>
+        <div id="location"></div>
 
         <button type="reset" class="btn btn-danger mt-3" onclick="window.location.reload()">Refresh</button>
         </div>
 
     </main>
 
+        <img src="VillMan_whitered.webp"
 
     <!-- End of Main -->
 
